--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "webpack-boilerplate-scss",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro G",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^4.1.0"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
