--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Alejandro G",
   "license": "MIT",
   "devDependencies": {
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
