--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "Alejandro G",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "webpack": "^4.1.0",
