--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alegorico/webpack-boilerplate-scss.git"
   }
 }
