--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
