--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "webpack-boilerplate-scss",
-  "version": "0.0.1",
-  "description": "",
-  "main": "./dist/main.js",
+  "version": "0.0.3",
+  "description": "Boilerplate webpack multibunble and SCSS compiler",
+  "main": "./dist/index.html",
   "scripts": {
-    "build": "NODE_ENV=production webpack --mode production",
-    "dev": "NODE_ENV=development webpack-dev-server --mode development --open",
+    "build": "NODE_ENV=production webpack -p",
+    "dev": "NODE_ENV=development webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro G",
@@ -14,16 +14,17 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "^3.11.0",
+    "webpack-cli": "^1.3.9",
+    "webpack-dev-server": "^2.9.7"
   },
   "repository": {
     "type": "git",
