--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
+    "pug-html-loader": "^1.1.5",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
