--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-boilerplate-scss",
   "version": "0.0.3",
-  "description": "Boilerplate webpack multibunble and SCSS compiler",
+  "description": "Boilerplate webpack multibundle and SCSS compiler",
   "main": "./dist/index.html",
   "scripts": {
     "build": "NODE_ENV=production webpack -p",
