--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Boilerplate webpack multibundle and SCSS compiler",
   "main": "./dist/index.html",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p",
-    "dev": "NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production webpack -p",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro G",
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
