--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./dist/main.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --mode production ./src/ReactApp.js",
-    "dev": "NODE_ENV=development webpack-dev-server --mode development ./src/ReactApp.js --open",
+    "build": "cross-env NODE_ENV=production webpack --mode production ./src/ReactApp.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development ./src/ReactApp.js --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alejandro G",
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
