--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "webpack-boilerplate-scss",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "author": "Alejandro G",
   "license": "MIT",
-  "devDependencies": {
-    "webpack": "^4.1.0"
-  }
+  "devDependencies": {}
 }
